# it-essentials

./: .gitignore  .pre-commit-config.yaml  README.md  add.py  consult.sql  consultas.py  database.db  detailed_structure.txt  models.py  project_structure.txt  pyproject.toml  routes.py  server.py
src/: core.py  math_utils.py
static/: style.css
templates/: 404.html  500.html  index.html
tests/: test_math_utils.py  test_monkeypatch.py  test_performance.py  test_sistemico.py  test_unitario.py
