[project]
name = "it-essentials"
version = "0.1.0"
description = "Master the basics."
authors = [
    {name = "Lucas Pires",email = "lucasopf95@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.17.1"
ruff = "^0.12.12"

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E", "F", "W"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true
known_first_party = ["it-essentials"]
known_third_party = ["numpy", "pandas"]
