[project]
name = "it-essentials"
version = "0.1.0"
package-mode = false
description = "Master the basics."
authors = [
    {name = "Lucas Pires", email = "lucasopf95@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.17.1"
ruff = "^0.12.12"
pytest = "^8.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"

# Configurações globais do Ruff
[tool.ruff]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "T", "S"]
fixable = ["E", "F", "W", "I", "T", "S"]
per-file-ignores = { "tests/*.py" = ["S101"] } # Ignorar S101 em arquivos de teste

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true
known_first_party = ["it-essentials"]
known_third_party = ["numpy", "pandas"]

[tool.mypy]
strict = true
